chore: implement leave management

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -33,7 +33,7 @@
   --clr-action-warning: #FFB200;
   --clr-bg-primary: #6C5FFC;
   --clr-bg-secondary: #1ABC9C;
-  --clr-bg-body: #f8f8fb;
+  --clr-bg-body: #f0f4f9;
   --clr-bg-card: #FFFFFF;
   --clr-bg-label: #f8f9fd;
   --clr-bg-light: #B8B8B8;
