--- a/public_html/assets/css/custom.css
+++ b/public_html/assets/css/custom.css
@@ -37,3 +37,18 @@
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
+
+/* .select2-container .select2-selection--single .select2-selection__rendered {
+	display: block;
+	width: 100%;
+	padding: 5px 15px !important;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.5;
+	color: var(--clr-text-body);
+	background-color: transparent;
+	background-clip: padding-box;
+	border: 1px solid var(--clr-border-1);
+	border-radius: 6px;
+	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+} */
