--- a/public_html/assets/css/custom.css
+++ b/public_html/assets/css/custom.css
@@ -52,3 +52,49 @@
 	border-radius: 6px;
 	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 } */
+
+@media print {
+    body {
+        margin: 0;
+        font-size: 10pt;
+    }
+
+    .payslip-container {
+        width: 90%;
+        max-width: 8.5in;
+        margin: 0.5in auto;
+        border: 1px solid #000;
+        padding: 0.25in;
+        box-sizing: border-box;
+        font-size: 10pt
+    }
+
+    .payslip-container * {
+        font-size: 10pt;
+    }
+
+    .payslip-container .payslip-header h4 {
+        font-size: 12pt;
+    }
+
+    .payslip-container .section {
+        margin-bottom: 0.2in;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 0.1in;
+    }
+    .payslip-container p {
+        margin: 0 0 5px 0;
+    }
+
+    .payslip-container .text-center {
+        text-align: center;
+    }
+
+    .payslip-container .text-muted {
+        font-size: 8pt;
+    }
+
+    .payslip-container button {
+        display: none;
+    }
+}
